--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
   font-family: 'Source Sans Pro', serif;  
-  /*border: 1px solid red;*/
+  border: 1px solid red;
+  margin: 0;
+  padding: 0;
 }
 
 body {
